--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,16 @@
 			android:name="com.google.android.geo.API_KEY"
 			android:value="AIzaSyBCpbmiACml1veGPvQ4WsP6zQf2jdev3jE" />
 		<activity
-			android:name=".MainActivity"
-			android:label="@string/app_name"
+			android:name=".login.LoginActivity"
 			android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity
+			android:name=".MainActivity"
+			android:theme="@style/AppTheme.NoActionBar"/>
 		<!-- Foreground services in Q+ require type. -->
 		<service
 			android:name=".record.LocationUpdatesService"
